Update README.md
Explanation:
Introduction:

Describes the purpose of the application and its main features.
Technologies Used:

Lists the technologies used in the project (Java and JavaFX).
Getting Started:

Provides instructions on prerequisites, installation, and running the application.
Includes detailed steps on how to set up JavaFX and compile/run the program.
Usage:

Explains how to use the application once it's running, including an example of input values.

This README file should help users understand what the program does, how to set it up, and how to use it.